add node classes